Map dataporten_group to 'Connect' domain

--- a/json/create-mapping.json
+++ b/json/create-mapping.json
@@ -11,7 +11,7 @@
 			"group": {
 			    "name": "dataporten_group",
 			    "domain": {
-				"id": "default"
+				"id": "CONNECT_DOMAIN_ID"
 			    }
 			}
                     }
